--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ thredds-quickstart:
   ports:
     - "80:8080"
     - "443:8443"
+    - "8443:8443"
 
 ###
 # THREDDS Production
@@ -16,6 +17,7 @@ thredds-production:
   ports:
     - "80:8080"
     - "443:8443"
+    - "8443:8443"
   container_name: thredds
   volumes:
     - /path/to/your/ssl.crt:/opt/tomcat/conf/ssl.crt
@@ -24,3 +26,19 @@ thredds-production:
     - /path/to/your/thredds/directory:/opt/tomcat/content/thredds
     - /path/to/your/data/directory1:/path/to/your/data/directory1 
     - /path/to/your/data/directory2:/path/to/your/data/directory2
+
+###
+# TDM
+###
+
+tdm:
+  image: unidata/tdm:latest
+  container_name: tdm
+  volumes:
+    - /path/to/your/thredds/directory:/opt/tomcat/content/thredds
+    - /path/to/your/data/directory1:/path/to/your/data/directory1 
+  environment:
+    # change the password
+    - TDM_PW=CHANGEME!
+    # that trailing slash is important
+    - TDS_HOST=http://thredds.yourhost.net/
