--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 # THREDDS Quickstart
 ###
 thredds-quickstart:
-  image: unidata/thredds-docker:latest
+  image: unidata/tds:latest
   ports:
     - "80:8080"
     - "443:8443"
@@ -13,7 +13,7 @@ thredds-quickstart:
 ###
 
 thredds-production:
-  image: unidata/thredds-docker:latest
+  image: unidata/tds:latest
   ports:
     - "80:8080"
     - "443:8443"
