kludge for tdm to log outside container until 5.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,10 @@ tdm:
   container_name: tdm
   volumes:
     - /path/to/your/thredds/directory:/opt/tomcat/content/thredds
-    - /path/to/your/data/directory1:/path/to/your/data/directory1 
+    - /path/to/your/data/directory1:/path/to/your/data/directory1
+    # TDM logging non-configurable until 5.0 so you'll need tdm.sh and
+    # tdm-4.6.jar if you want to log outside the container :-(
+    - /path/to/your/:/opt/tomcat/content/tdm/
   environment:
     # change the password
     - TDM_PW=CHANGEME!
