--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,8 @@ thredds-production:
     - "8443:8443"
   container_name: thredds
   volumes:
-    - /path/to/your/logs/:/opt/tomcat/logs/
+    - /path/to/your/tomcat/logs/:/opt/tomcat/logs/
+    - /path/to/your/thredds/logs/:/opt/tomcat/content/thredds/logs/
     - /path/to/your/ssl.crt:/opt/tomcat/conf/ssl.crt
     - /path/to/your/ssl.key:/opt/tomcat/conf/ssl.key
     - /path/to/your/tomcat-users.xml:/opt/tomcat/conf/tomcat-users.xml
