migrating to unidata/tomcat-docker:8

--- a/Dockerfile.tdm
+++ b/Dockerfile.tdm
@@ -20,9 +20,13 @@ RUN apt-get install -y curl
 # directory structure.
 ###
 
-ENV CATALINA_HOME /opt/tomcat
+ENV CATALINA_HOME /usr/local/tomcat
 
-ENV TDM_HOME /opt/tomcat/content/tdm
+RUN groupadd -r tomcat -g 1000 && \
+    useradd -u 1000 -r -g tomcat -d ${CATALINA_HOME} -s /bin/bash -c \
+    "User tomcat for Docker image" tomcat
+
+ENV TDM_HOME ${CATALINA_HOME}/content/tdm
 
 RUN mkdir -p $TDM_HOME
 
