--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,10 @@ thredds-production:
     - "8443:8443"
   container_name: thredds
   volumes:
-    - /path/to/your/tomcat/logs/:/opt/tomcat/logs/
-    - /path/to/your/thredds/logs/:/opt/tomcat/content/thredds/logs/
-    - /path/to/your/ssl.crt:/opt/tomcat/conf/ssl.crt
-    - /path/to/your/ssl.key:/opt/tomcat/conf/ssl.key
-    - /path/to/your/tomcat-users.xml:/opt/tomcat/conf/tomcat-users.xml
-    - /path/to/your/thredds/directory:/opt/tomcat/content/thredds
+    - /path/to/your/tomcat/logs/:/usr/local/tomcat/logs/
+    - /path/to/your/thredds/logs/:/usr/local/tomcat/content/thredds/logs/
+    - /path/to/your/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml
+    - /path/to/your/thredds/directory:/usr/local/tomcat/content/thredds
     - /path/to/your/data/directory1:/path/to/your/data/directory1 
     - /path/to/your/data/directory2:/path/to/your/data/directory2
 
@@ -37,31 +35,13 @@ tdm:
   image: unidata/tdm:latest
   container_name: tdm
   volumes:
-    - /path/to/your/thredds/directory:/opt/tomcat/content/thredds
+    - /path/to/your/thredds/directory:/usr/local/tomcat/content/thredds
     - /path/to/your/data/directory1:/path/to/your/data/directory1
     # TDM logging non-configurable until 5.0 so you'll need tdm.sh and
     # tdm-4.6.jar if you want to log outside the container :-(
-    - /path/to/your/tdm/logs:/opt/tomcat/content/tdm/
+    - /path/to/your/tdm/logs:/usr/local/tomcat/content/tdm/
   environment:
     # change the password
     - TDM_PW=CHANGEME!
     # that trailing slash is important
     - TDS_HOST=http://thredds.yourhost.net/
-
-
-###
-# Vanilla Axiom Tomcat, useful for debugging or experimentation
-###
-
-axiom-tomcat:
-  image: axiom/docker-tomcat
-  ports:
-    - "80:8080"
-    - "443:8443"
-    - "8443:8443"
-  container_name: tomcat
-  volumes:
-    - /path/to/your/logs/:/opt/tomcat/logs/
-    - /path/to/your/ssl.crt:/opt/tomcat/conf/ssl.crt
-    - /path/to/your/ssl.key:/opt/tomcat/conf/ssl.key
-    - /path/to/your/tomcat-users.xml:/opt/tomcat/conf/tomcat-users.xml
