--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   DOCKER_COMPOSE_VERSION: 1.5.2
 
 before_install:
-  - docker build -t unidata/tds:latest .
+  - docker build -t unidata/thredds-docker:latest .
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
