--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ services:
 before_install:
   - docker build --no-cache -t unidata/thredds-docker:latest .
   - docker run --name thredds -v `pwd`/.travis:/travis -d -p 8080:8080 unidata/thredds-docker:latest
-  - curl -o /dev/null http://127.0.0.1:8080/thredds/catalog.html || true
   # Give chance for TDS to fire up
-  - sleep 300
+  - nc -z -w300 127.0.0.1 8080
+  - for i in {1..5}; do curl -o /dev/null http://127.0.0.1:8080/thredds/ && break || (echo sleeping 15... && sleep 15); done
 
 script:
   - ./.travis/test.sh
