--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,13 @@
 version: '3'
 
 services:
+  thredds-quickstart:
+    image: unidata/thredds-docker:4.6.10
+    ports:
+      - "80:8080"
+      - "443:8443"
+      - "8443:8443"
+      
   thredds-production:
     image: unidata/thredds-docker:4.6.10
     ports:
