--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
       - "80:8080"
       - "443:8443"
       - "8443:8443"
-      
+    env_file:
+      - "compose${THREDDS_COMPOSE_ENV_LOCAL}.env"
+
   thredds-production:
     image: unidata/thredds-docker:4.6.10
     ports:
@@ -23,6 +25,8 @@ services:
       - /path/to/your/thredds/directory:/usr/local/tomcat/content/thredds
       - /path/to/your/data/directory1:/path/to/your/data/directory1
       - /path/to/your/data/directory2:/path/to/your/data/directory2
+    env_file:
+      - "compose${THREDDS_COMPOSE_ENV_LOCAL}.env"
 
   ###
   # TDM
@@ -37,8 +41,5 @@ services:
       # TDM logging non-configurable until 5.0 so you'll need tdm.sh and
       # tdm.jar if you want to log outside the container :-(
       - /path/to/your/tdm/logs:/usr/local/tomcat/content/tdm/
-    environment:
-      # change the password
-      - TDM_PW=CHANGEME!
-      # that trailing slash is important
-      - TDS_HOST=http://thredds.yourhost.net/
+    env_file:
+      - "compose${THREDDS_COMPOSE_ENV_LOCAL}.env"
