--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ thredds-production:
     - /path/to/your/thredds/directory:/usr/local/tomcat/content/thredds
     - /path/to/your/data/directory1:/path/to/your/data/directory1 
     - /path/to/your/data/directory2:/path/to/your/data/directory2
+  env_file:
+    - "compose${THREDDS_COMPOSE_ENV_LOCAL}.env"
 
 ###
 # TDM
@@ -42,8 +44,5 @@ tdm:
     # TDM logging non-configurable until 5.0 so you'll need tdm.sh and
     # tdm.jar if you want to log outside the container :-(
     - /path/to/your/tdm/logs:/usr/local/tomcat/content/tdm/
-  environment:
-    # change the password
-    - TDM_PW=CHANGEME!
-    # that trailing slash is important
-    - TDS_HOST=http://thredds.yourhost.net/
+  env_file:
+    - "compose${THREDDS_COMPOSE_ENV_LOCAL}.env"
