more tdm env vars

--- a/compose.env
+++ b/compose.env
@@ -4,7 +4,7 @@
 
 TDS_CONTENT_ROOT_PATH=/usr/local/tomcat/content
 
-# The amount of Xmx and Xms memory Java args to allocate to the THREDDS
+# The minimum and maximum Java heap space memory to be allocated to the TDS
 
 THREDDS_XMX_SIZE=4G
 
@@ -15,3 +15,9 @@ THREDDS_XMS_SIZE=4G
 TDM_PW=CHANGEME!
 
 TDS_HOST=http://thredds.yourhost.net/
+
+# The minimum and maximum Java heap space memory to be allocated to the TDM
+
+TDM_XMX_SIZE=6G
+
+TDM_XMS_SIZE=1G
