unidata/tomcat-docker:8.5

--- a/compose.env
+++ b/compose.env
@@ -21,3 +21,9 @@ TDS_HOST=http://thredds.yourhost.net/
 TDM_XMX_SIZE=6G
 
 TDM_XMS_SIZE=1G
+
+# See https://github.com/Unidata/tomcat-docker#configurable-tomcat-uid-and-gid
+
+TOMCAT_USER_ID=1000
+
+TOMCAT_GROUP_ID=1000
