--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3'
 
 services:
   thredds-quickstart:
-    image: unidata/thredds-docker:5.0-SNAPSHOT
+    image: unidata/thredds-docker:5.0-beta2
     ports:
       - "80:8080"
       - "443:8443"
       - "8443:8443"
 
   thredds-production:
-    image: unidata/thredds-docker:5.0-SNAPSHOT
+    image: unidata/thredds-docker:5.0-beta2
     ports:
       - "80:8080"
       - "443:8443"
