--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -20,7 +20,7 @@ volumes:
 
 services:
   thredds:
-    image: unidata/thredds-docker:4.6.11
+    image: unidata/thredds-docker:latest
     networks:
         thredds_network:
           aliases:
