--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -20,7 +20,7 @@ volumes:
 
 services:
   thredds:
-    image: unidata/thredds-docker:5.0-beta8
+    image: unidata/thredds-docker:5.0-SNAPSHOT
     networks:
         thredds_network:
           aliases:
