--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -16,7 +16,7 @@ volumes:
 
 services:
   thredds:
-    image: unidata/thredds-docker:4.6.15
+    image: unidata/thredds-docker:4.6.16-SNAPSHOT
     networks:
         thredds_network:
           aliases:
