Change "push" event to "workflow_dispatch" event

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ name: Docker Image CI
 
 # Leave out specific branches so this same workflow can be used on any branch
 on:
-  push:
+  workflow_dispatch:
   pull_request_target:
     types: [ opened, reopened, edited, synchronize, closed]
   
@@ -45,7 +45,7 @@ jobs:
       run: ./.github/testScripts/test.sh
 
     - name: Push to Dockerhub
-      if: ${{ github.event_name == 'push' || github.event.pull_request_target.merged == true}}
+      if: ${{ github.event_name == 'workflow_dispatch' || github.event.pull_request_target.merged == true}}
       run: |
         echo "Event that triggered workflow: ${{ github.event_name }}"
         docker logout
