--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,7 @@ name: Docker Image CI
 
 # Leave out specific branches so this same workflow can be used on any branch
 on:
+  push:
   workflow_dispatch:
   pull_request_target:
     types: [ opened, reopened, edited, synchronize, closed]
@@ -45,10 +46,11 @@ jobs:
       run: ./.github/testScripts/test.sh
 
     - name: Push to Dockerhub
-      if: ${{ github.event_name == 'workflow_dispatch' || github.event.pull_request_target.merged == true}}
+      if: ${{ github.event_name == 'workflow_dispatch' || github.event.pull_request.merged == true}}
       run: |
         echo "Event that triggered workflow: ${{ github.event_name }}"
         docker logout
         echo ${{ secrets.registrypwd }} | docker login -u ${{ secrets.registryuser }} --password-stdin
-        docker push ${{ secrets.imagename }}:${{ env.tag }}
-        docker logout && echo Successfully pushed to and logged out of Docker registry
+        docker push ${{ secrets.imagename }}:${{ env.tag }} &&
+        { docker logout && echo "Successfully pushed ${{ secrets.imagename }}:${{ env.tag }}"; } ||
+        { docker logout && echo "Docker push failed" && exit 1; }
